sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow__c/AI_Workflow__c.object-meta.xml
<CustomObject>
    <description>Defines an end-to-end AI automation workflow consisting of ordered AI steps.</description>
    <label>AI Workflow</label>
    <nameField>
        <label>Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>