sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow__c/fields/Last_Executed__c.field-meta.xml
<CustomField>
    <fullName>Last_Executed__c</fullName>
    <label>Last Executed</label>
    <type>DateTime</type>
</CustomField>