sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow__c/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <description>Email address to notify on workflow failure</description>
    <label>Notification Email</label>
    <type>Email</type>
</CustomField>