sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow__c/fields/Retry_Delay_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Retry_Delay_Seconds__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Retry Delay (Seconds)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>