sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow__c/fields/Total_Executions__c.field-meta.xml
<CustomField>
    <fullName>Total_Executions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Executions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>