sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow__c/fields/Trigger_Condition__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Condition__c</fullName>
    <description>SOQL WHERE clause fragment used to filter trigger eligibility</description>
    <label>Trigger Condition (SOQL WHERE)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>