sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow__c/fields/Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Object__c</fullName>
    <description>Salesforce object that triggers this workflow (e.g. Lead, Case)</description>
    <label>Trigger Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>