sf-ai-orchestrator/force-app/main/default/objects/AI_Workflow__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <label>Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MANUAL</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>RECORD_TRIGGER</fullName>
                <label>Record Trigger</label>
            </value>
            <value>
                <fullName>SCHEDULED</fullName>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>PLATFORM_EVENT</fullName>
                <label>Platform Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>